# home_work_2_10

CmakeDynamic_3/: CMakeLists.txt  DynamicGoodbye.cpp  DynamicGoodbye.h  goodbyeClient.cpp
CmakeDynamic_5/: CMakeLists.txt  Home_WORK_2_10_5.cpp  equilateralTriangle.cpp  equilateralTriangle.h  figura.h  isoscelesTriangle.h  parallelogram.h  print.cpp  print.h  quadrilateral.h  rectangle.h  square.h  straighTriangle.h  triangle.h
LibraryDynamic_2/: Dynamicgoodbye.cpp  Dynamicgoodbye.h  MathPowerLibraryDynamic.sln  MathPowerLibraryDynamic.vcxproj  MathPowerLibraryDynamic.vcxproj.filters
LibraryDynamic_2/MathPowerClient/: MathPowerClient.vcxproj  MathPowerClient.vcxproj.filters  goodbye.cpp
LibraryDynamic_4/: LibraryDynamic_4.sln  LibraryDynamic_4.vcxproj  LibraryDynamic_4.vcxproj.filters  equilateralTriangle.h  figura.cpp  figura.h  isoscelesTriangle.h  parallelogram.h  print_info.cpp  print_info.h  quadrilateral.h  rectangle.h  rhomb.h  square.h  straighTriangle.h  triangle.h
LibraryDynamic_4/Home_Work_2_10_4/: Home_Work_2_10_4.vcxproj  Home_Work_2_10_4.vcxproj.filters
LibraryStatic_1/: MathPower.cpp  MathPower.h  MathPowerLibraryStatic.sln  MathPowerLibraryStatic.vcxproj  MathPowerLibraryStatic.vcxproj.filters
LibraryStatic_1/MathPowerClient/: MathPowerClient.cpp  MathPowerClient.vcxproj  MathPowerClient.vcxproj.filters
